# LaWeCSE

./: CMakeLists.txt  LaWeCSE  README.md  example.fog  weight_function
include/: MCIS2.h  TreeGen.h  auxiliary.h  bbpmcsi.h  global.h  graphVisualization.h  hungarian.h  mwm.h
src/: MCIS2NK.cpp  TreeGen.cpp  auxiliary.cpp  bbpmcsi.cpp  graphVisualization.cpp  hungarian.cpp  main.cpp  mwm.cpp
